# sentinel

./: .env.example  .gitignore  Dockerfile  LICENSING.md  README.md  Sentinel_plan.md  config.example.yaml  docker-compose.yml  gozer_ai_apparatus.md  gozer_core.md  pyproject.toml  sentinel_gui.bat
.claude/: settings.local.json
config/: homelab.yaml  llm_pools.example.yaml
deploy/grafana/provisioning/datasources/: datasources.yml
deploy/prometheus/: prometheus.yml
docs/: CTO_ARCHITECTURE.md  PRODUCTION_READINESS.md  STUB_IMPLEMENTATION_PLAN.md
scripts/: create_shortcut.ps1  export_public.sh  generate_icon.py
src/nexus/: README.md  __init__.py
src/nexus/coo/: __init__.py  orchestrator.py
src/nexus/core/: __init__.py
src/nexus/core/llm/: __init__.py  cio_router.py  cto_router.py  router.py
src/sentinel/: __init__.py  licensing.py  main.py
src/sentinel/agents/: __init__.py  base.py  discovery.py  factory.py  guardian.py  healer.py  optimizer.py  planner.py  policy.py  registry.py  strategy.py  testing.py
src/sentinel/agents/hierarchy/: __init__.py  compliance.py  cost_manager.py  disaster_recovery.py  discovery.py  guardian.py  healer.py  optimizer.py
src/sentinel/agents/hierarchy/specialists/: __init__.py  compliance.py  cost_management.py  disaster_recovery.py  discovery.py  network.py  reliability.py  security.py
src/sentinel/api/: __init__.py  app.py  auth.py
src/sentinel/cli/: __init__.py  commands.py  main.py
src/sentinel/core/: __init__.py  config.py  engine.py  event_bus.py  learning.py  metrics.py  scheduler.py  state.py  utils.py
src/sentinel/core/hierarchy/: __init__.py  base.py
src/sentinel/core/models/: __init__.py  device.py  event.py  network.py  policy.py
src/sentinel/gui/: __init__.py  __main__.py  app.py  main_window.py
src/sentinel/integrations/: __init__.py  base.py
src/sentinel/integrations/compute/: __init__.py  cluster.py  node.py
src/sentinel/integrations/hypervisors/: __init__.py  proxmox.py
src/sentinel/integrations/llm/: __init__.py  manager.py
src/sentinel/integrations/native/: __init__.py  firewall.py
src/sentinel/integrations/routers/: __init__.py  mikrotik.py  opnsense.py
src/sentinel/integrations/storage/: __init__.py  truenas.py
src/sentinel/integrations/switches/: __init__.py  ubiquiti.py
src/sentinel/integrations/wan/: __init__.py  connection.py  manager.py
src/sentinel/iot/: __init__.py  classifier.py  segmenter.py
src/sentinel/orchestration/: __init__.py  bridges.py
src/sentinel/visualization/: __init__.py  exporters.py  topology.py
tests/: conftest.py  test_agents.py  test_agents_base.py  test_agents_discovery.py  test_agents_guardian.py  test_agents_healer.py  test_agents_optimizer.py  test_agents_planner.py  test_agents_policy.py  test_agents_testing.py  test_api.py  test_api_comprehensive.py  test_auth.py  test_cli.py  test_config.py  test_cto_architecture.py  test_engine.py  test_engine_comprehensive.py  test_event_bus.py  test_gui.py  test_integrations.py  test_iot_classifier.py  test_main.py  test_metrics.py  test_metrics_comprehensive.py  test_models.py  test_models_device_comprehensive.py  test_models_event_comprehensive.py  test_models_network.py  test_models_policy.py  test_orchestration_bridges.py  test_scheduler.py  test_state.py  test_state_comprehensive.py  test_visualization.py  test_wan_manager.py
tests/integration/: __init__.py  test_api_engine.py  test_e2e_workflows.py  test_engine_agents.py  test_event_flow.py  test_llm_specialists.py
